WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192531
Don't programmatically capitalize safe browsing warning buttons
https://bugs.webkit.org/show_bug.cgi?id=192531
Summary
Don't programmatically capitalize safe browsing warning buttons
Alex Christensen
Reported
2018-12-08 17:48:13 PST
Don't programmatically capitalize safe browsing warning buttons
Attachments
Patch
(3.06 KB, patch)
2018-12-08 17:49 PST
,
Alex Christensen
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-12-08 17:49:41 PST
Created
attachment 356894
[details]
Patch
Alex Christensen
Comment 2
2018-12-08 17:49:43 PST
<
rdar://problem/46417791
>
Alex Christensen
Comment 3
2018-12-08 20:12:02 PST
http://trac.webkit.org/r239015
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug