Don't programmatically capitalize safe browsing warning buttons https://bugs.webkit.org/show_bug.cgi?id=192531 <rdar://problem/46417791>

Reviewed by Darin Adler.

Source/WebCore:

This doesn't work so well in other languages.
Capitalize the source strings in English instead.

* en.lproj/Localizable.strings:

Source/WebKit:

* UIProcess/Cocoa/WKSafeBrowsingWarning.mm:
(makeButton):



Canonical link: https://commits.webkit.org/207110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239015 268f45cc-cd09-0410-ab3c-d52691b4dbfc